--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ kind: "workshop"
 
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
-repository: <USERNAME>/<PROJECT>
+repository: AmyOlex/2017-09-22-vcu
 
 # Sites.
 amy_site: "https://amy.software-carpentry.org/workshops"
