--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ template_repo: "https://github.com/swcarpentry/styles"
 example_repo: "https://github.com/swcarpentry/lesson-example"
 example_site: "https://swcarpentry.github.com/lesson-example"
 workshop_repo: "https://github.com/AmyOlex/2017-09-22-vcu"
-workshop_site: "https://swcarpentry.github.io/workshop-template"
+workshop_site: "https://AmyOlex.github.io/2017-09-22-vcu"
 training_site: "https://swcarpentry.github.io/instructor-training"
 swc_installer: "https://github.com/swcarpentry/windows-installer/releases/download/v0.3/SWCarpentryInstaller.exe"
 
